--- a/src/main/resources/static/mall/styles/order-detail.css
+++ b/src/main/resources/static/mall/styles/order-detail.css
@@ -400,6 +400,16 @@ td {
 .order-view-box .uc-order-item .order-items-table .col-name {
     width: 550px;
 }
+.col-eva{
+    font-size: 18px;
+    width: 100%;
+    margin: 20px;
+    border-bottom: 1px solid #999;
+}
+.col-eva td{
+    width: 150px;
+    text-align: center;
+}
 .show-name{
     font-size: 18px;
     font-family: "微软雅黑";
