--- a/src/main/resources/templates/mall/order-detail.html
+++ b/src/main/resources/templates/mall/order-detail.html
@@ -146,7 +146,7 @@
                                             <td class="col col-name">
                                                 <p class="name">
                                                     <a class="show-name" target="_blank" th:href="@{'/goods/detail/'+${item.goodsId}}"
-                                                       th:text="${item.goodsName}">newbee</a>
+                                                       th:text="${item.goodsName}"></a>
                                                 </p>
                                             </td>
                                             <td class="col col-price"><p class="price"
@@ -156,9 +156,42 @@
                                             </td>
                                         </tr>
                                     </th:block>
+
+
                                     </tbody>
                                 </table>
                             </div>
+                            <th:block th:if="${orderDetailVO.orderStatus==5}">
+                                <table>
+                                    <tr class="col col-eva">
+                                        <td>商品序列</td>
+                                        <td>我的评价</td>
+                                        <td>物品评分</td>
+                                        <td>服务评分</td>
+                                        <td>物流评分</td>
+                                        <td>评价日期</td>
+                                    </tr>
+                                    <th:block th:each="item,itemStat: ${userOrderComment}">
+                                        <tr class="col col-eva">
+                                            <td width="80" th:text="'商品'+${itemStat.count}"> </td>
+                                            <!--                                    <td width="160px">我的评价:</td>-->
+                                            <td><div  th:text="${item.userEvaluation}"></div></td>
+                                            <!--                                    <td width="80x">物品评分</td>-->
+                                            <td width="50px"><div  th:text="${item.goodsScore}"></div></td><br>
+                                            <!--                                    <td width="80px">服务评分</td>-->
+                                            <td width="50px"><div  th:text="${item.serviceScore}"></div></td><br>
+                                            <!--                                    <td width="80px">物流评分</td>-->
+                                            <td width="50px"><div  th:text="${item.logisticsScore}"></div></td>
+                                            <!--                                    <td width="180px">评价日期</td>-->
+                                            <td><div  th:text="${item.commentCreateTime}"></div></td>
+                                            <td rowspan="2"><a href="##" th:onclick="deleteComment([[${item.orderNo}]])">X</a></td>
+                                        </tr>
+
+                                    </th:block>
+
+
+                                </table>
+                            </th:block>
                             <div id="editAddr" class="order-detail-info">
                                 <h3>收货信息</h3>
                                 <table class="info-table">
@@ -221,9 +254,13 @@
                                         </td>
                                     </tr>
 
+
                                     </tbody>
                                 </table>
                             </div>
+
+
+
                             <!--用户评价-->
                             <div style="display:none" id="commentContext">
                                 <table class="order-items-table">
@@ -417,6 +454,39 @@
     //计算商品种数
     var size = document.getElementById('countSize').value;
 
+    function deleteComment(orderNo) {
+        swal({
+            title: "确认弹框",
+            text: "确认要删除数据吗?",
+            icon: "warning",
+            buttons: true,
+            dangerMode: true,
+        }).then((flag) => {
+            if (flag) {
+                $.ajax({
+                    type: "DELETE",
+                    url: '/deleteComment/' + orderNo,
+                    success: function (result) {
+                        if (result.resultCode == 200) {
+                            window.location.reload();
+                        } else {
+                            swal("操作失败", {
+                                icon: "error",
+                            });
+                        }
+                    },
+                    error: function () {
+                        swal("操作失败", {
+                            icon: "error",
+                        });
+                    }
+                });
+            }
+        }
+    )
+        ;
+    }
+
 
     function submitImg(goodsId){
         var imgFile = document.getElementById("imgFile"+goodsId).files[0];
@@ -467,10 +537,8 @@
 
     // 提交评价
     function finishComment(goodsId){
-
         var commentText = document.getElementById("commentText"+goodsId).value;
         var orderNo = $("#orderNoValue").val();
-        console.log(orderNo);
         var data = {
             "userEvaluation": commentText,
             "goodsScore": goodsScore,
