--- a/src/main/resources/templates/mall/order-detail.html
+++ b/src/main/resources/templates/mall/order-detail.html
@@ -56,8 +56,8 @@
                                     </div>
                                     <div class="order-desc">
                                         <th:block th:if="${orderDetailVO.orderStatus==0}">请尽快完成支付哦~</th:block>
-                                        <th:block th:if="${orderDetailVO.orderStatus==1}">newbee商城订单确认中~</th:block>
-                                        <th:block th:if="${orderDetailVO.orderStatus==2}">newbee仓库正在紧急配货中~</th:block>
+                                        <th:block th:if="${orderDetailVO.orderStatus==1}">apple商城订单确认中~</th:block>
+                                        <th:block th:if="${orderDetailVO.orderStatus==2}">仓库正在紧急配货中~</th:block>
                                         <th:block th:if="${orderDetailVO.orderStatus==3}">订单已出库正在快马加鞭向您奔来~</th:block>
                                         <th:block th:if="${orderDetailVO.orderStatus==4}">交易成功，感谢您对newbee商城的支持~</th:block>
                                         <th:block th:if="${orderDetailVO.orderStatus<0}">交易已关闭~</th:block>
@@ -445,7 +445,7 @@
 <script th:src="@{/admin/plugins/jquery/jquery.min.js}"></script>
 <script th:src="@{/admin/plugins/sweetalert/sweetalert.min.js}"></script>
 <script th:src="@{/mall/js/detail.js}"></script>
-<script type="text/javascript">
+<script th:inline="javascript">
     // 打分
     var goodsScore;
     var logisticsScore;
@@ -545,8 +545,7 @@
             "logisticsScore": logisticsScore,
             "serviceScore": serviceScore,
             "orderNo": orderNo,
-            "goodsId": goodsId,
-            "userId": 9
+            "goodsId": goodsId
         };
         $.ajax({
             type: 'POST',
@@ -583,7 +582,6 @@
 
     //追加评价
     function commentAgain(goodsId){
-
         var commentText = document.getElementById("commentText2"+goodsId).value;
         var orderNo = $("#orderNoValue").val();
         console.log(orderNo);
@@ -593,8 +591,7 @@
             "logisticsScore": logisticsScore,
             "serviceScore": serviceScore,
             "orderNo": orderNo,
-            "goodsId": goodsId,
-            "userId": 9
+            "goodsId": goodsId
         };
         $.ajax({
             type: 'POST',
