修改店铺管理功能bug

--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -105,7 +105,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a th:href="@{/admin/shops}" th:class="${path}=='users'?'nav-link active':'nav-link'">
+                    <a th:href="@{/admin/shops}" th:class="${path}=='shops'?'nav-link active':'nav-link'">
                         <i class="fa fa-users nav-icon" aria-hidden="true"></i>
                         <p>
                             店铺管理
