--- a/src/main/resources/templates/mall/footer.html
+++ b/src/main/resources/templates/mall/footer.html
@@ -21,23 +21,22 @@
             </dl>
             <dl class="col-article">
                 <dt>关注我们</dt>
-                <dd><a rel="nofollow" href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">新浪微博</a></dd>
-                <dd><a rel="nofollow" href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">官方微信</a></dd>
+                <dd><a rel="nofollow" href="https://weibo.com/u/6411049747" target="_blank">新浪微博</a></dd>
+                <dd><a rel="nofollow" href="#" target="_blank">官方微信</a></dd>
                 <dd><a rel="nofollow" href="tencent://AddContact/?fromId=45&fromSubId=1&subcmd=all&uin=1431881130&website=www.oicqzone.com" target="_blank">联系我们</a></dd>
             </dl>
 
             <dl class="col-article">
                 <dt>线下门店</dt>
-                <dd><a rel="nofollow" href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">NEWBEE TOWN</a>
+                <dd><a rel="nofollow" href="https://github.com/SpringbootMall/apple" target="_blank">NEWBEE TOWN</a>
                 </dd>
-                <dd><a rel="nofollow" href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">服务网点</a></dd>
-                <dd><a rel="nofollow" href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">授权体验店</a></dd>
+                <dd><a rel="nofollow" href="https://github.com/SpringbootMall/apple" target="_blank">服务网点</a></dd>
+                <dd><a rel="nofollow" href="https://github.com/SpringbootMall/apple" target="_blank">授权体验店</a></dd>
             </dl>
 
             <dl class="wx">
                 <dt>apple-mall</dt>
                 <dd>
-<!--                    123465498798-->
                 </dd>
             </dl>
 
