--- a/src/main/resources/templates/mall/header.html
+++ b/src/main/resources/templates/mall/header.html
@@ -50,7 +50,7 @@
                         </li>
                         <th:block th:if="${session.newBeeMallUser.rightFlag==1}">
                         <li>
-                            <a th:href="@{/myShop}">
+                            <a th:href="@{/seller}">
                                 我的店铺
                             </a>
                         </li>
@@ -58,7 +58,7 @@
 
                         <th:block th:if="${session.newBeeMallUser.rightFlag==0}">
                             <li>
-                                <a th:href="@{/myShop}">
+                                <a th:href="@{/seller}">
                                     成为商家
                                 </a>
                             </li>
