--- a/src/main/resources/templates/mall/detail.html
+++ b/src/main/resources/templates/mall/detail.html
@@ -2,6 +2,17 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="mall/header::head-fragment('Apple商城-商品详情','detail')">
 </head>
+<style type="text/css">
+    tr{
+        width:500px;
+        text-align:center;
+        vertical-align:middle;
+        height:20px;
+    }
+    td{
+        font-weight:bold
+    }
+</style>
 <body>
 <header th:replace="mall/header::header-fragment"></header>
 
@@ -68,8 +79,26 @@
         <div class="clear"></div>
     </div>
     <!-- 这里使用的是 th:utext 标签，用 th:text 不会解析 html，用 th:utext 会解析 html -->
-    <div class="goods mt20 w clearfix" th:utext="${goodsDetail.goodsDetailContent}">
-    </div>
+   <div align="center" style="font-size: 20px">
+       <table border="0" align="center" width="800px" height="200px" rules="rows">
+       <tr>
+               <td style="color: #0f73da">用户</td>
+               <td style="color: #0f73da">评论</td>
+               <td style="color: #0f73da">追评</td>
+               <td style="color: #0f73da">商品打分</td>
+               <td style="color: #0f73da">服务打分</td>
+               <td style="color: #0f73da">物流打分</td>
+           </tr>
+           <tr th:each="comment:${comments}">
+               <td th:text="${comment.userId}"></td>
+               <td th:text="${comment.userEvaluation}"></td>
+               <td th:text="${comment.addEvaluation}"></td>
+               <td th:text="${comment.goodsScore}"></td>
+               <td th:text="${comment.serviceScore}"></td>
+               <td th:text="${comment.logisticsScore}"></td>
+           </tr>
+       </table>
+   </div>
 </div>
 
 <div th:replace="mall/footer::footer-fragment"></div>
