--- a/src/main/resources/templates/mall/header.html
+++ b/src/main/resources/templates/mall/header.html
@@ -33,6 +33,7 @@
         <ul class="fl">
             <li><a th:href="@{/index}">商城主页</a></li>
             <li><a th:href="@{/admin}">后台管理系统</a></li>
+            <li><a th:href="@{/post}">帖子</a></li>
         </ul>
         <div class="fr">
             <th:block th:unless="${session.newBeeMallUser==null}">
