--- a/src/main/resources/templates/mall/cart.html
+++ b/src/main/resources/templates/mall/cart.html
@@ -34,9 +34,8 @@
         <th:block th:unless="${#lists.isEmpty(myShoppingCartItems)}">
             <div class="list center">
                 <div class="top2 center">
-                    <div class="sub_top fl">
-                    </div>
                     <div class="sub_top fl">商品名称</div>
+                    <div class="sub_top fl">商店名称</div>
                     <div class="sub_top fl">单价</div>
                     <div class="sub_top fl">数量</div>
                     <div class="sub_top fl">小计</div>
@@ -45,9 +44,10 @@
                 </div>
                 <th:block th:each="item : ${myShoppingCartItems}">
                     <div class="content2 center">
-                        <div class="sub_content fl ">
-                        </div>
+
                         <div class="sub_content cover fl"><img th:src="@{${item.goodsCoverImg}}"></div>
+                        <div class="sub_content fl " th:text="${item.shopName}">
+                        </div>
                         <div class="sub_content fl ft20" th:text="${item.goodsName}">商品名称</div>
                         <div class="sub_content fl" th:text="${item.sellingPrice+'元'}">1299元</div>
                         <div class="sub_content fl">
