--- a/src/main/resources/templates/mall/order-settle.html
+++ b/src/main/resources/templates/mall/order-settle.html
@@ -56,10 +56,16 @@
                                         </ol>
                                     </div>
                                 </div>
+
+
+
+
                                 <table class="order-items-table">
                                     <tbody>
-
-                                    <th:block th:each="item : ${myShoppingCartItems}">
+                                    <th:block th:each="item : ${buyInOneShopVOList}">
+                                        <tr><td th:text="${item.shopName}"></td></tr>
+                                        shoppingCartItemVOs
+                                        <th:block th:each="shoppingCartItemVO : ${item.shoppingCartItemVOs}">
                                         <tr>
                                             <td class="col col-thumb">
                                                 <div class="figure figure-thumb">
@@ -81,9 +87,69 @@
                                             <td class="col col-actions">
                                             </td>
                                         </tr>
+
+                                    </th:block>
+                                        <tr>
+                                            <th>商品总价：</th>
+                                            <td><span class="num" th:text="${item.price}+'.00'}">1299.00</span>元</td>
+                                        </tr>
                                     </th:block>
                                     </tbody>
                                 </table>
+                            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--                                <table class="order-items-table">-->
+<!--                                    <tbody>-->
+
+<!--                                    <th:block th:each="item : ${myShoppingCartItems}">-->
+<!--                                        <tr>-->
+<!--                                            <td class="col col-thumb">-->
+<!--                                                <div class="figure figure-thumb">-->
+<!--                                                    <a target="_blank" th:href="@{'/goods/detail/'+${item.goodsId}}">-->
+<!--                                                        <img th:src="@{${item.goodsCoverImg}}"-->
+<!--                                                             width="80" height="80" alt="">-->
+<!--                                                    </a>-->
+<!--                                                </div>-->
+<!--                                            </td>-->
+<!--                                            <td class="col col-name">-->
+<!--                                                <p class="name">-->
+<!--                                                    <a target="_blank" th:href="@{'/goods/detail/'+${item.goodsId}}"-->
+<!--                                                       th:text="${item.goodsName}">newbee</a>-->
+<!--                                                </p>-->
+<!--                                            </td>-->
+<!--                                            <td class="col col-price"><p class="price"-->
+<!--                                                                         th:text="${item.sellingPrice+'元 x '+item.goodsCount}">-->
+<!--                                                1299元 × 1</p></td>-->
+<!--                                            <td class="col col-actions">-->
+<!--                                            </td>-->
+<!--                                        </tr>-->
+<!--                                    </th:block>-->
+<!--                                    </tbody>-->
+<!--                                </table>-->
+
+
+
                             </div>
                             <div id="editAddr" class="order-detail-info">
                                 <h3>收货信息</h3>
@@ -116,25 +182,25 @@
                                 <div class="actions">
                                 </div>
                             </div>
-                            <div class="order-detail-total">
-                                <table class="total-table">
-                                    <tbody>
-                                    <tr>
-                                        <th>商品总价：</th>
-                                        <td><span class="num" th:text="${priceTotal+'.00'}">1299.00</span>元</td>
-                                    </tr>
-                                    <tr>
-                                        <th>运费：</th>
-                                        <td><span class="num">0</span>元</td>
-                                    </tr>
-                                    <tr>
-                                        <th class="total">应付金额：</th>
-                                        <td class="total"><span class="num" th:text="${priceTotal+'.00'}">1299.00</span>元
-                                        </td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </div>
+<!--                            <div class="order-detail-total">-->
+<!--                                <table class="total-table">-->
+<!--                                    <tbody>-->
+<!--                                    <tr>-->
+<!--                                        <th>商品总价：</th>-->
+<!--                                        <td><span class="num" th:text="${priceTotal+'.00'}">1299.00</span>元</td>-->
+<!--                                    </tr>-->
+<!--                                    <tr>-->
+<!--                                        <th>运费：</th>-->
+<!--                                        <td><span class="num">0</span>元</td>-->
+<!--                                    </tr>-->
+<!--                                    <tr>-->
+<!--                                        <th class="total">应付金额：</th>-->
+<!--                                        <td class="total"><span class="num" th:text="${priceTotal+'.00'}">1299.00</span>元-->
+<!--                                        </td>-->
+<!--                                    </tr>-->
+<!--                                    </tbody>-->
+<!--                                </table>-->
+<!--                            </div>-->
                         </div>
                     </div>
                 </div>
