基本注册信息

--- a/src/main/resources/templates/mall/header.html
+++ b/src/main/resources/templates/mall/header.html
@@ -58,7 +58,7 @@
 
                         <th:block th:if="${session.newBeeMallUser.rightFlag==0}">
                             <li>
-                                <a th:href="@{/seller}">
+                                <a th:href="@{/becomeseller}">
                                     成为商家
                                 </a>
                             </li>
