--- a/src/main/resources/templates/seller/seller.html
+++ b/src/main/resources/templates/seller/seller.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="mall/header::head-fragment('NewBee商城-搜索','search')">
+    <link th:href="@{/mall/css/bootstrap-modal.css}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 <header th:replace="mall/header::header-fragment"></header>
@@ -11,9 +15,57 @@
 <div class="sort">
     <div class="list">
         <h3>您的店铺：</h3>
+        <a href="/shopRegister"
+           style="color:#1baeae;margin-left: 600px;">
+            申请开店
+        </a>
     </div>
 </div>
-
+<!--<div id="personal">-->
+<!--<div class="content">-->
+<!--    &lt;!&ndash; 模态框（Modal） &ndash;&gt;-->
+<!--    <div class="modal fade" id="personalInfoModal" tabindex="-1" role="dialog"-->
+<!--         aria-labelledby="personalInfoModalLabel">-->
+<!--        <div class="modal-dialog" role="document">-->
+<!--            <div class="modal-content">-->
+<!--                <div class="modal-header">-->
+<!--                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span-->
+<!--                            aria-hidden="true">&times;</span></button>-->
+<!--                    <h6 class="modal-title" id="personalInfoModalLabel">个人信息修改</h6>-->
+<!--                </div>-->
+<!--                <div class="modal-body">-->
+<!--                    <form id="personalInfoForm">-->
+<!--                        <div class="form-group">-->
+<!--                            <label for="nickName" class="control-label">昵称:</label>-->
+<!--                            <input type="hidden" id="userId" >-->
+<!--                            <input type="text" class="form-control" id="nickName" name="nickName"-->
+<!--                                   placeholder="请输入昵称"-->
+<!--                                   required="true">-->
+<!--                        </div>-->
+<!--                        <div class="form-group">-->
+<!--                            <label for="introduceSign" class="control-label">个性签名:</label>-->
+<!--                            <input type="text" class="form-control" id="introduceSign" name="introduceSign"-->
+<!--                                   placeholder="请输入个性签名"-->
+<!--                                   required="true">-->
+<!--                        </div>-->
+<!--                        <div class="form-group">-->
+<!--                            <label for="address" class="control-label">收货信息:</label>-->
+<!--                            <input type="text" class="form-control" id="address" name="address"-->
+<!--                                   placeholder="请输入收货信息"-->
+<!--                                   required="true">-->
+<!--                        </div>-->
+<!--                    </form>-->
+<!--                </div>-->
+<!--                <div class="modal-footer">-->
+<!--                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>-->
+<!--                    <button type="button" class="btn btn-primary" id="saveButton">确认</button>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    &lt;!&ndash; /.modal &ndash;&gt;-->
+<!--</div>-->
+<!--</div>//拟态框失败了-->
 <div class="goods_item center">
     <div class="main center">
         <th:block th:each="shop : ${shops}">
@@ -28,16 +80,71 @@
         <div class="clear"></div>
     </div>
 </div>
+
 <div>
     <div th:replace="mall/footer::footer-fragment"></div>
 </div>
 <!-- jQuery -->
 <script th:src="@{/admin/plugins/jquery/jquery.min.js}"></script>
+<!-- Bootstrap 3 -->
+<script th:src="@{/mall/js/bootstrap3.js}"></script>
 <script th:src="@{/mall/js/search.js}" type="text/javascript"></script>
-<script type="text/javascript">
-    function enterShop(shopId) {
+<script th:src="@{/admin/plugins/sweetalert/sweetalert.min.js}"></script>
+<!--<script type="text/javascript">-->
+<!--    function openUpdateModal() {-->
+<!--        $('#personalInfoModal').modal('show');-->
+<!--    }-->
 
-    }
-</script>
+<!--    //绑定modal上的保存按钮-->
+<!--    $('#saveButton').click(function () {-->
+<!--        var address = $("#address").val();-->
+<!--        if (address.trim().length < 10) {-->
+<!--            swal("请输入正确的收货信息", {-->
+<!--                icon: "error"-->
+<!--            });-->
+<!--            return;-->
+<!--        }-->
+<!--        var introduceSign = $("#introduceSign").val();-->
+<!--        if (introduceSign.trim().length < 4) {-->
+<!--            swal("请输入正确的个性签名", {-->
+<!--                icon: "error"-->
+<!--            });-->
+<!--            return;-->
+<!--        }-->
+<!--        var nickName = $("#nickName").val();-->
+<!--        if (nickName.trim().length < 2) {-->
+<!--            swal("请输入正确的昵称", {-->
+<!--                icon: "error"-->
+<!--            });-->
+<!--            return;-->
+<!--        }-->
+<!--        var userId = $("#userId").val();-->
+<!--        var data = {-->
+<!--            "userId": userId,-->
+<!--            "address": address,-->
+<!--            "introduceSign": introduceSign,-->
+<!--            "nickName": nickName-->
+<!--        };-->
+<!--        $.ajax({-->
+<!--            type: 'POST',//方法类型-->
+<!--            url: '/personal/updateInfo',-->
+<!--            contentType: 'application/json',-->
+<!--            data: JSON.stringify(data),-->
+<!--            success: function (result) {-->
+<!--                if (result.resultCode == 200) {-->
+<!--                    $('#personalInfoModal').modal('hide');-->
+<!--                    window.location.reload();-->
+<!--                } else {-->
+<!--                    $('#personalInfoModal').modal('hide');-->
+<!--                    alert(result.message);-->
+<!--                }-->
+<!--                ;-->
+<!--            },-->
+<!--            error: function () {-->
+<!--                alert('操作失败');-->
+<!--            }-->
+<!--        });-->
+<!--    });-->
+<!--</script>-->
 </body>
 </html>
