--- a/src/main/resources/templates/seller/order.html
+++ b/src/main/resources/templates/seller/order.html
@@ -129,7 +129,7 @@
                                 <input type="hidden" id="orderNo">
                                 <div class="form-group">
                                     <label for="reply" class="control-label">回复评价:&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                                    <input type="number" class="form-control" id="reply" name="totalPrice"
+                                    <input type="text" class="form-control" id="reply" name="reply"
                                            placeholder="请输入回评" required="true">
                                 </div>
                             </form>
