--- a/src/main/resources/templates/mall/footer.html
+++ b/src/main/resources/templates/mall/footer.html
@@ -28,7 +28,7 @@
 
             <dl class="col-article">
                 <dt>线下门店</dt>
-                <dd><a rel="nofollow" href="https://github.com/SpringbootMall/apple" target="_blank">NEWBEE TOWN</a>
+                <dd><a rel="nofollow" href="https://github.com/SpringbootMall/apple" target="_blank">APPLE TOWN</a>
                 </dd>
                 <dd><a rel="nofollow" href="https://github.com/SpringbootMall/apple" target="_blank">服务网点</a></dd>
                 <dd><a rel="nofollow" href="https://github.com/SpringbootMall/apple" target="_blank">授权体验店</a></dd>
@@ -56,11 +56,11 @@
 
         <div class="footer-info w1100">
             <div class="info-text w1100">
-                <p><a href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">苹果商城 &nbsp; | &nbsp;
+                <p><a href="https://github.com/SpringbootMall/apple" target="_blank">苹果商城 &nbsp; | &nbsp;
                     Powered by *&nbsp;
                     | &nbsp;</a>
                 </p>
-                <p><a href="https://gitee.com/newbee-ltd/newbee-mall" target="_blank">Copyright ©newbee.ltd All
+                <p><a href="https://github.com/SpringbootMall/apple" target="_blank">Copyright ©apple.mall All
                     Rights
                     Reserved.&nbsp; | &nbsp; 浙ICP备17008806号-5 </a></p>
 
