店铺注册功能的添加和店铺显示功能的完善

--- a/src/main/resources/templates/mall/header.html
+++ b/src/main/resources/templates/mall/header.html
@@ -59,7 +59,7 @@
 
                         <th:block th:if="${session.newBeeMallUser.rightFlag==0}">
                             <li>
-                                <a th:href="@{/becomeseller}">
+                                <a th:href="@{/becomeSeller}">
                                     成为商家
                                 </a>
                             </li>
