修改前端样式和拦截器

--- a/src/main/resources/templates/mall/shopRegister.html
+++ b/src/main/resources/templates/mall/shopRegister.html
@@ -35,10 +35,9 @@
                         <td><input type="text" id="shopCategory" name="shopCategory" placeholder="请输入店铺分类"></td>
                     </tr>
                     <tr>
-                        <td></td>
+                        <td>上传店铺图片</td>
                         <td>
                             <input type="file" name="file" id="shopImage" />
-
                         </td>
                     </tr>
                     <tr>
