--- a/src/main/resources/templates/admin/mall_shop.html
+++ b/src/main/resources/templates/admin/mall_shop.html
@@ -38,10 +38,10 @@
 <!--                            <button class="btn btn-info" onclick="modifyRightUser(1)"><i-->
 <!--                                    class="fa fa-plus"></i>&nbsp;提升权限为商家-->
 <!--                            </button>-->
-                            <button class="btn btn-success" onclick="lockUser(0)"><i
+                            <button class="btn btn-success" onclick="lockShop(0)"><i
                                     class="fa fa-trash-o"></i>&nbsp;解冻店铺
                             </button>
-                            <button class="btn btn-danger" onclick="lockUser(1)"><i
+                            <button class="btn btn-danger" onclick="lockShop(1)"><i
                                     class="fa fa-trash-o"></i>&nbsp;冻结店铺
                             </button>
 
