--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -105,10 +105,27 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a th:href="@{/admin/userapply}" th:class="${path}=='userapply'?'nav-link active':'nav-link'">
+                        <i class="fa fa-users nav-icon" aria-hidden="true"></i>
+                        <p>
+                            商家申请列表
+                        </p>
+                    </a>
+                </li>
+
+                <li class="nav-item">
                     <a th:href="@{/admin/shops}" th:class="${path}=='shops'?'nav-link active':'nav-link'">
                         <i class="fa fa-users nav-icon" aria-hidden="true"></i>
                         <p>
                             店铺管理
+                        </p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a th:href="@{/admin/shopapply}" th:class="${path}=='shopapply'?'nav-link active':'nav-link'">
+                        <i class="fa fa-users nav-icon" aria-hidden="true"></i>
+                        <p>
+                            店铺申请列表
                         </p>
                     </a>
                 </li>
