--- a/src/main/resources/templates/mall/post.html
+++ b/src/main/resources/templates/mall/post.html
@@ -10,6 +10,18 @@
         font-weight:700;
         color: #1baeae;
     }
+    button {
+        background: #008EAD;
+        border: 1px solid #008EaF;
+        color: #fff;
+        border-radius: 5px;
+        font-weight: bold;
+        padding: 10px 15px;
+        cursor: pointer;
+    }
+    button:hover{
+        background: #694530;
+    }
 </style>
 <body>
 <header th:replace="mall/header::header-fragment"></header>
