--- a/src/main/resources/templates/mall/header.html
+++ b/src/main/resources/templates/mall/header.html
@@ -88,7 +88,7 @@
                     <li><a th:href="@{/register}">注册</a></li>
                 </ul>
                 <div class="shopcart">
-                    <a href="##" style="color: white;"><i class="iconfont icon-cart"></i>
+                    <a th:href="@{/shop-cart}" style="color: white;"><i class="iconfont icon-cart"></i>
                         购物车(0)</a>
                 </div>
             </th:block>
