--- a/src/main/resources/templates/mall/order-detail.html
+++ b/src/main/resources/templates/mall/order-detail.html
@@ -59,7 +59,7 @@
                                         <th:block th:if="${orderDetailVO.orderStatus==1}">apple商城订单确认中~</th:block>
                                         <th:block th:if="${orderDetailVO.orderStatus==2}">仓库正在紧急配货中~</th:block>
                                         <th:block th:if="${orderDetailVO.orderStatus==3}">订单已出库正在快马加鞭向您奔来~</th:block>
-                                        <th:block th:if="${orderDetailVO.orderStatus==4}">交易成功，感谢您对newbee商城的支持~</th:block>
+                                        <th:block th:if="${orderDetailVO.orderStatus==4}">交易成功，感谢您对apple商城的支持~</th:block>
                                         <th:block th:if="${orderDetailVO.orderStatus<0}">交易已关闭~</th:block>
 
                                     </div>
