--- a/src/main/resources/templates/mall/alipay.html
+++ b/src/main/resources/templates/mall/alipay.html
@@ -14,9 +14,9 @@
     <meta http-equiv="Cache" content="no-cache">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>newbee-mall 支付</title>
+    <title>apple-mall 支付</title>
     <link th:href="@{/mall/styles/pay.css}" rel="stylesheet" media="screen">
-    <script type="text/javascript" src="https://cdn.staticfile.org/jquery/1.11.1/jquery.min.js"></script>
+    <script type="text/javascript" th:src="@{/admin/plugins/jquery/jquery.min.js}"></script>
 </head>
 
 <body>
@@ -75,7 +75,7 @@
 </div>
 <script type="text/javascript">
     function payOrderSuccess() {
-        var orderNo = $("#orderNoValue").val();
+        var orderNo = document.getElementById('orderNoValue').value;
         $.ajax({
             type: 'GET',
             url: '/paySuccess?payType=1&orderNo=' + orderNo,
