--- a/src/main/resources/templates/mall/footer.html
+++ b/src/main/resources/templates/mall/footer.html
@@ -62,8 +62,7 @@
                 </p>
                 <p><a href="https://github.com/SpringbootMall/apple" target="_blank">Copyright ©apple.mall All
                     Rights
-                    Reserved.&nbsp; | &nbsp; 浙ICP备17008806号-5 </a></p>
-
+                    Reserved.&nbsp; | &nbsp; web后端大作业 </a></p>
             </div>
         </div>
         <div class="footer-links w1100">
