--- a/src/main/resources/templates/mall/personal.html
+++ b/src/main/resources/templates/mall/personal.html
@@ -69,6 +69,11 @@
                                        placeholder="请输入收货信息" th:value="${session.newBeeMallUser.address}"
                                        required="true">
                             </div>
+                            <div class="form-group">
+                                <label for="address" class="control-label">密码:</label>
+                                <input type="text" class="form-control" id="password" name="password"
+                                       placeholder="新密码（6-20位数字和字母组合）" >
+                            </div>
                         </form>
                     </div>
                     <div class="modal-footer">
@@ -119,12 +124,15 @@
             return;
         }
         var userId = $("#userId").val();
+        var password = $("#password").val();
         var data = {
             "userId": userId,
             "address": address,
             "introduceSign": introduceSign,
-            "nickName": nickName
+            "nickName": nickName,
+            "passwordMd5": password
         };
+
         $.ajax({
             type: 'POST',//方法类型
             url: '/personal/updateInfo',
