--- a/src/main/resources/templates/mall/wxpay.html
+++ b/src/main/resources/templates/mall/wxpay.html
@@ -16,7 +16,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>newbee-mall 支付</title>
     <link th:href="@{/mall/styles/pay.css}" rel="stylesheet" media="screen">
-    <script type="text/javascript" src="https://cdn.staticfile.org/jquery/1.11.1/jquery.min.js"></script>
+    <script type="text/javascript" th:src="@{/admin/plugins/jquery/jquery.min.js}"></script>
 </head>
 
 <body>
