--- a/src/main/resources/templates/mall/order-detail.html
+++ b/src/main/resources/templates/mall/order-detail.html
@@ -137,7 +137,7 @@
                                         <tr>
                                             <td class="col col-thumb">
                                                 <div class="figure figure-thumb">
-                                                    <a target="_blank" th:href="@{'/goods/detail/'+${item.goodsId}}">
+                                                    <a target="_blank" th:href="@{/detail(goodsId=${item.goodsId})}">
                                                         <img th:src="@{${item.goodsCoverImg}}"
                                                              width="80" height="80" alt="">
                                                     </a>
@@ -145,7 +145,7 @@
                                             </td>
                                             <td class="col col-name">
                                                 <p class="name">
-                                                    <a class="show-name" target="_blank" th:href="@{'/goods/detail/'+${item.goodsId}}"
+                                                    <a class="show-name" target="_blank" th:href="@{/detail(goodsId=${item.goodsId})}"
                                                        th:text="${item.goodsName}"></a>
                                                 </p>
                                             </td>
@@ -274,7 +274,7 @@
                                         <tr>
                                             <td class="col col-name">
                                                 <p class="name">
-                                                    <a class="show-name" target="_blank" th:href="@{'/goods/detail/'+${item.goodsId}}"
+                                                    <a class="show-name" target="_blank" th:href="@{/detail(goodsId=${item.goodsId})}"
                                                        th:text="${item.goodsName}">newbee</a>
                                                 </p>
                                             </td>
@@ -365,7 +365,7 @@
                                         <tr>
                                             <td class="col col-name">
                                                 <p class="name">
-                                                    <a  class="show-name" target="_blank" th:href="@{'/goods/detail/'+${item.goodsId}}"
+                                                    <a  class="show-name" target="_blank" th:href="@{/detail(goodsId=${item.goodsId})}"
                                                         th:text="${item.goodsName}"></a>
                                                 </p>
                                             </td>
