--- a/src/main/resources/templates/mall/order-settle.html
+++ b/src/main/resources/templates/mall/order-settle.html
@@ -168,7 +168,7 @@
                                         <th>收货地址：</th>
                                         <td class="user_address_label"
                                             th:text="${session.newBeeMallUser.address==''?'无':session.newBeeMallUser.address}">
-                                            newbee
+                                            apple
                                         </td>
                                     </tr>
                                     </tbody>
