--- a/src/main/resources/templates/mall/post.html
+++ b/src/main/resources/templates/mall/post.html
@@ -71,7 +71,7 @@
     }
 
 </script>
-<script typet="text/javascript" src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js">
+<script type="text/javascript" th:src="@{/admin/plugins/jquery/jquery.min.js}">
 </script>
 <script>
     $(function () {
@@ -105,7 +105,6 @@
             dataType: "json",
             success:function (result) {
                 if (result) {
-                    alert(result);
                     swal({
                         title: "发布成功",
                         text: "确认框",
