--- a/src/main/resources/templates/mall/post.html
+++ b/src/main/resources/templates/mall/post.html
@@ -1,5 +1,5 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="mall/header::head-fragment('NewBee商城-搜索','search')">
+<head th:replace="mall/header::head-fragment('Apple商城-搜索','search')">
 </head>
 <link rel="stylesheet" th:href="@{/admin/plugins/sweetalert/sweetalert.css}"/>
 <style type="text/css">
